--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<div class="hero">
+      <div class="image">
+        <img
+          src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="hihi "
+        />
+      </div>
+
+      <div class="data">
+        <h1>Welcome to my Pinterest clone</h1>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <button type="button">Explore Now</button>
+      </div>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
